--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>My Playlist</h1>
+	<div class="playlist">
+		<ul>
+			<li><a>Song 1</a></li>
+			<li><a>Song 2</a></li>
+			<li><a>Song 3</a></li>
+			<li><a>Song 4</a></li>
+			<li><a>Song 5</a></li>
+			
+		</ul>
+	</div>
+	<h2>Now Playing</h2>
+	
+	<div class="playing">
+		<div class="player_one"></div>
+		<div class="player_two"></div>
+	</div>
+	<h2>MP3 songs</h2>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
