--- a/main.html
+++ b/main.html
@@ -22,10 +22,21 @@
 	<h2>Now Playing</h2>
 	
 	<div class="playing">
-		<div class="player_one"></div>
-		<div class="player_two"></div>
+		<div class="player_one">
+			<video controls muted volume>
+				<source type="video/mp4" src="https://www.w3schools.com/tags/movie.mp4">
+			</video>
+		</div>
+		<h2>MP3 songs</h2>
+		
+		<div class="player_two">
+			
+			<audio controls volume>
+				<source  type="audio/mp3" src="https://www.pagalworld.com.se/files/download/id/64630">
+			</audio>
+		</div>
 	</div>
-	<h2>MP3 songs</h2>
+	
 	
     <script type="text/javascript" src="./script.js">
 </script>
