--- a/main.html
+++ b/main.html
@@ -11,15 +11,15 @@
 	<h1>My Playlist</h1>
 	<div class="playlist">
 		<ul>
-			<li><a>Song 1</a></li>
-			<li><a>Song 2</a></li>
-			<li><a>Song 3</a></li>
-			<li><a>Song 4</a></li>
-			<li><a>Song 5</a></li>
+			<li><a target="_blank">Song 1</a></li>
+			<li><a target="_blank">Song 2</a></li>
+			<li><a target="_blank">Song 3</a></li>
+			<li><a target="_blank">Song 4</a></li>
+			<li><a target="_blank">Song 5</a></li>
 			
 		</ul>
 	</div>
-	<h2>Now Playing</h2>
+	<h2>Now Playing...</h2>
 	
 	<div class="playing">
 		<div class="player_one">
@@ -31,7 +31,7 @@
 		
 		<div class="player_two">
 			
-			<audio controls volume>
+			<audio controls volume loop>
 				<source  type="audio/mp3" src="https://www.pagalworld.com.se/files/download/id/64630">
 			</audio>
 		</div>
